--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="banner-area">
+        <h1>All Thinks Are Possible If You believe</h1>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <button class="btn-primary">Contact Us</button>
+      </div>
+    </header>
     <main></main>
     <footer></footer>
   </body>
