failure are done

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New me, A new starting of me!</title>
-    <link rel="stylesheet" href="style/style.css" />
+    <script
+      src="https://kit.fontawesome.com/ee1c0f6e42.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header>
@@ -18,7 +22,43 @@
         <button class="btn-primary">Contact Us</button>
       </div>
     </header>
-    <main></main>
+    <main class="container">
+      <div class="failure-are">
+        <div class="failure-left"><img src="./images/person.png" alt="" /></div>
+        <div class="failure-right">
+          <h2>My failures of previous year</h2>
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock.
+          </p>
+          <div class="list">
+            <ul>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
