my plans area done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
     </header>
     <main class="container">
+      <!-- my failure area  -->
       <div class="failure-are">
         <div class="failure-left"><img src="./images/person.png" alt="" /></div>
         <div class="failure-right">
@@ -39,16 +40,15 @@
                 not simply.
               </li>
               <li>
-                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
-                not simply.
+                <i class="fa-solid fa-check"></i> Contrary to popular belief.
               </li>
               <li>
                 <i class="fa-solid fa-check"></i> Contrary to popular belief, is
                 not simply.
               </li>
               <li>
-                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
-                not simply.
+                <i class="fa-solid fa-check"></i> Contrary to popular belief is
+                not.
               </li>
               <li>
                 <i class="fa-solid fa-check"></i> Contrary to popular belief, is
@@ -58,6 +58,34 @@
           </div>
         </div>
       </div>
+      <!-- failure are ends -->
+      <!-- my plans area starts -->
+      <div class="plans-area">
+        <h2>My Plans</h2>
+        <div class="plan-info">
+          <div class="plan-card">
+            <img src="./images/icons/web.png" alt="" />
+            <h3>Web Development</h3>
+            <p>I want to start</p>
+          </div>
+          <div class="plan-card">
+            <img src="./images/icons/js.png" alt="" />
+            <h3>Web Development</h3>
+            <p>I want to leard</p>
+          </div>
+          <div class="plan-card">
+            <img src="./images/icons/smoke.png" alt="" />
+            <h3>Web Development</h3>
+            <p>I want to end</p>
+          </div>
+          <div class="plan-card">
+            <img src="./images/icons/ecom.png" alt="" />
+            <h3>Web Development</h3>
+            <p>I want to develop</p>
+          </div>
+        </div>
+      </div>
+      <!-- my plans area ends -->
     </main>
     <footer></footer>
   </body>
