--- a/index.html
+++ b/index.html
@@ -86,6 +86,18 @@
         </div>
       </div>
       <!-- my plans area ends -->
+      <!-- banner area starts -->
+      <div class="bottom-banner-area">
+        <div class="bottom-banner-info">
+          <div class="bottom-banner-text">
+            <div>
+              <h1>Awlays keep a positive mindset</h1>
+              <button class="btn-primary">Call Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- banner area ends -->
     </main>
     <footer></footer>
   </body>
