--- a/index.html
+++ b/index.html
@@ -99,6 +99,32 @@
       </div>
       <!-- banner area ends -->
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="footer-area">
+          <div class="footer-left">
+            <h1>Future</h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words
+            </p>
+            <p>Email : info@gmail.com</p>
+            <p>Phone : 01500 00 00 00</p>
+            <div class="icon">
+              <img src="./images/icons/fb.png" alt="" /><img
+                src="./images/icons/twitter.png"
+                alt=""
+              /><img src="./images/icons/youtube.png" alt="" />
+            </div>
+          </div>
+          <div class="footer-right">
+            <h3>Subscribe</h3>
+            <input type="email" name="email" id="" placeholder="Your Email" />
+            <button class="btn-secondery">Subscribe</button>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
